update proj1a